[package]
name = "poc"
version = "1.0.0"
edition = "2021"
description = "Policy-to-Outcome Compiler: Deterministic policy compilation into governance artifacts"
license = "MIT"
repository = "https://github.com/pngen/poc"
keywords = ["governance", "policy", "compiler", "deterministic", "audit"]
categories = ["development-tools", "compilers"]

[dependencies]

[dev-dependencies]

[features]
default = []